Updated course response, Added pagination for courses, Added single and compound indexes on course entity